--- a/.env.example
+++ b/.env.example
@@ -5,6 +5,7 @@ DB_PASSWORD=your_postgres_password
 DB_NAME=story_platform
 DB_PORT=5432
 JWT_SECRET=your_jwt_secret
+BASE_URL=YOUR_BASE_URL
 
 STAGING_DB_HOST=staging-host
 STAGING_DB_USER=staging-user
